// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`oasOpSecurityDefined oas2 return errors on invalid object 1`] = `
Array [
  Object {
    "code": "operation-security-defined",
    "message": "Operation \`security\` values must match a scheme defined in the \`securityDefinitions\` object.",
    "path": Array [
      "paths",
      "/path",
      "get",
      "security",
      "0",
    ],
    "range": Object {
      "end": Object {
        "character": 24,
        "line": 7,
      },
      "start": Object {
        "character": 10,
        "line": 6,
      },
    },
    "severity": 1,
    "source": undefined,
    "summary": "Operation \`security\` values must match a scheme defined in the \`securityDefinitions\` object.",
  },
]
`;

exports[`oasOpSecurityDefined oas3 return errors on invalid object 1`] = `
Array [
  Object {
    "code": "operation-security-defined",
    "message": "Operation \`security\` values must match a scheme defined in the \`components.securitySchemes\` object.",
    "path": Array [
      "paths",
      "/path",
      "get",
      "security",
      "0",
    ],
    "range": Object {
      "end": Object {
        "character": 24,
        "line": 7,
      },
      "start": Object {
        "character": 10,
        "line": 6,
      },
    },
    "severity": 1,
    "source": undefined,
    "summary": "Operation \`security\` values must match a scheme defined in the \`components.securitySchemes\` object.",
  },
]
`;
